# DataPipeline

./: CMakeLists.txt  README.md  main.cpp
data/: test_1.csv
include/: DataPipeline.H
include/datapipeline/: CsvDataReader.H  Data.H  DataReader.H  DataRow.H  DataWriter.H  Exports.H  JsonDataWriter.H  Validate.H  XmlDataWriter.H
src/: CsvDataReader.C  Data.C  DataRow.C  JsonDataWriter.C  Validate.C  XmlDataWriter.C
tests/: CMakeLists.txt  TestCsvDataReader.cpp  TestData.cpp  TestDataRow.cpp  TestExports.cpp  TestGeneral.cpp  TestJsonDataWriter.cpp  TestValidate.cpp  TestXmlDataWriter.cpp
