INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS}
${PROJECT_SOURCE_DIR}/include
)

# TODO: loop over each file to generate executables in each file and test in folder
# loop over all the files with 'cpp' extension which are test cpp files
FILE(GLOB TEST_FILES "Test*.cpp")
FOREACH(TEST_FILE ${TEST_FILES})
	GET_FILENAME_COMPONENT(TEST_NAME ${TEST_FILE} NAME_WE)
	STRING(TOLOWER ${TEST_NAME} TEST_PROG_NAME)
	ADD_EXECUTABLE(${TEST_PROG_NAME} ${TEST_FILE})
	TARGET_LINK_LIBRARIES(${TEST_PROG_NAME} gtest ${SHARED_LIB_NAME} ${CMAKE_THREAD_LIBS_INIT})
	ADD_TEST(${TEST_PROG_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TEST_NAME})	
ENDFOREACH(TEST_FILE ${TEST_FILES})

